Bug 1167721 - Ensure we trigger a repaint when dropping velocity to zero in CancelAnimation. r=botond